# reconpoint

./: .coveragerc  .deepsource.toml  .dockerignore  .env  .env.example  .env_template  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  COMPREHENSIVE_GUIDE.md  CONTRIBUTORS.md  DOCUMENTATION_CONSOLIDATION.md  FINAL_CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_READY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  build-multiplatform.sh  check_arm64_support.sh  default_yaml_config.yaml  docker-compose.arm.yml  docker-compose.dev.yml  docker-compose.yml  index.html  install.sh  make.bat  mkdocs.yml  package-lock.json  pyproject.toml  sitemap.xml  test_enhancements.sh  update.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SPONSORS.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/lint/: .markdownlint.json
.github/workflows/: add-to-project.yml  auto-comment.yml  auto-release.yml  build-pr.yml  build.yml  codeql-analysis.yml  coverage.yml  dep-auto-merge.yml  dependency-updates.yml  docker-publish.yml  dockerhub-push.yml  github-pages-deploy.yml  issue-manager.yml  label-approved.yml  markdownlint.yml
api/: index.html  shared_api_tasks.py
backup/: index.html
certs/: entrypoint.sh
changelog/: index.html
community/blog-videos/: index.html
community/discord/: index.html
config/nginx/: reconpoint.conf
configuration/nginx/: reconpoint.conf
dashboard/: urls.py
dashboard/migrations/: 0001_initial.py  0002_chaosapikey_hackeroneapikey_inappnotification_userpreferences.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.setup.yml  docker-compose.yml
docker/certs/: entrypoint.sh
docs/: changelog.md  getting-started.md  index.md  mkdocs.yml
docs/community/: blog-videos.md
docs/install/: detailed.md  quick.md  remotedb.md
docs/security/: index.md
docs/usage/: external-tool.md  hackerone.md  projects.md  roles_perms.md
getting-started/: index.html
install/detailed/: index.html
install/quick/: index.html
install/remotedb/: index.html
install/vps/: index.html
k8s/: pvc.yml  readme.md
k8s/celery/: celery-config.yml  deployment.yml
k8s/celery-beat/: deployment.yml  pvc.yml  service.yml
k8s/cert-manager/: certificate.yaml  cluster-issuer.yml
k8s/nginx/: configmap.yml  deployment.yml  ingress.yml
k8s/ollama/: deployment.yml  pvc.yml  service.yml
k8s/postgres/: statefulset.yml
k8s/redis/: deployment.yml
k8s/web/: deployment.yml  job.yml  service.yml
overrides/: main.html
reconPoint/: celery_custom_task.py  charts.py  database_utils.py  definitions.py  tasks.py
recon_note/: urls.py
requirements/: base.in  compile_requirements.sh  dev.in  prod.in  test-requirements.txt  test.in
scanEngine/: forms.py  urls.py  views.py
scripts/: benchmark_performance.py  implement_guide.sh  install.sh  migrate_database.sh  rollback_indexes.sh  test_migrations.sh  uninstall.sh  update.sh  verify_indexes.sh
search/: search_index.json
security/: index.html
startScan/: apps.py
static/custom/: update.js
targetApp/: admin.py  views.py
uninstall/: index.html
update/: index.html
usage/: index.html
usage/external-tool/: index.html
usage/hackerone/: index.html
usage/interesting/: index.html
usage/notification/: index.html
usage/organization/: index.html
usage/projects/: index.html
usage/proxy/: index.html
usage/report/: index.html
usage/roles_perms/: index.html
usage/scan_engine/: index.html
usage/scan_target/: index.html
usage/settings/: index.html
usage/subscan/: index.html
usage/targets/: index.html
usage/tool_conf/: index.html
web/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  beat-entrypoint.sh  celery-entrypoint.sh  debugger_setup.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  manage.py  requirements.txt
web/api/: health.py  (+5 more)
(+113 files in other folders)
